--- a/server/components/submarine/submarine.css
+++ b/server/components/submarine/submarine.css
@@ -4,7 +4,7 @@
   width: 140dvw;
   display: flex;
   justify-content: center;
-  z-index: 9999999 !important;
+  z-index: 9999 !important;
   overflow-x: hidden;
 }
 
