--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -44,6 +44,7 @@
         <img class="top-right layer-2" src="/public/images/images-responsiveness/frame-top-right.png">
     </div>
 {% render '../components/stage-lights/stage-light.liquid' %}
+{% render '../components/hammer-cursor/hammer-cursor.liquid' %}
 
 
     <svg class="visually-hidden" width="10" height="10" xmlns="http://www.w3.org/2000/svg">
