--- a/server/views/projects/projects.liquid
+++ b/server/views/projects/projects.liquid
@@ -3,6 +3,8 @@
 {% layout "server/layouts/base.liquid" %}
 
 {% block content %}
+  <div class="curtain-left curtain-left-animation-open"></div>
+  <div class="curtain-right curtain-right-animation-open"></div> 
 <div class="container">
   <nav>
     <a href="/"><img src="/public/images/logo-man-navbar.svg" alt="logo of DMMDH"></a>
