--- a/client/index.css
+++ b/client/index.css
@@ -24,4 +24,5 @@
 @import "../server/components/pop-over/pop-over.css";
 @import '../server/components/stage-lights/stage-light.css';
 @import "../server/components/cannon/cannon.css";
+@import "../server/components/moon/moon.css";
 
