--- a/client/index.css
+++ b/client/index.css
@@ -7,6 +7,7 @@
 @import "../server/layouts/base.css";
 @import "../server/views/index.css";
 @import "../server/views/projects/projects.css";
+@import "../server/views/about/about.css";
 
 /* component styling */
 
