--- a/server/views/index.liquid
+++ b/server/views/index.liquid
@@ -3,22 +3,22 @@
 
 
 {% comment %}
-  {% block content %}
-  <div class="container">
+{% block content %}
+<div class="container">
   <h1>De Man met de hamer</h1>
 
   <a href="/projects">
-  <h2>Naar projecten</h2>
+    <h2>Naar projecten</h2>
   </a>
 
 
   {% endblock %}{% endcomment %}
 
 
-{% block content %}
-    
-    <div class="frame">
-    {%render '../components/preloader/preload.liquid'%}
+  {% block content %}
+
+  <div class="frame">
+    {% render '../components/preloader/preload.liquid'%}
     {% render '../components/stage-lights/stage-light.liquid' %}
 
     <a href="/about" class="logo-container layer-1">
@@ -26,7 +26,7 @@
         <div class="cable"></div>
         <div class="cable"></div>
         <div class="logo">
-          <img src="/public/images/images-responsiveness/hanging-logo.png">
+          <img src="/public/images/images-responsiveness/hanging-logo.webp">
           <div class="gradient"></div>
         </div>
       </div>
@@ -36,11 +36,11 @@
     </a>
 
     <div class="audience layer-3">
-      <img src="/public/images/images-responsiveness/audience.png">
+      <img src="/public/images/images-responsiveness/audience.webp">
     </div>
 
-    <img class="bottom-left layer-2" src="/public/images/images-responsiveness/frame-bottom-left.png">
-    <img class="top-left layer-2" src="/public/images/images-responsiveness/frame-top-left.png">
+    <img class="bottom-left layer-2" src="/public/images/images-responsiveness/frame-bottom-left.webp">
+    <img class="top-left layer-2" src="/public/images/images-responsiveness/frame-top-left.webp">
     <div class="repeating-wall-left layer-2"></div>
 
     <div class="repeating-cage layer-2"></div>
@@ -49,8 +49,8 @@
     <div class="repeating-floor layer-2"></div>
 
     <a href="/projects" class="prop-container layer-1">
-      <img class="prop-shadows" src="/public/images/images-responsiveness/prop-shadows.png">
-      <img class="props" src="/public/images/images-responsiveness/props.png">
+      <img class="prop-shadows" src="/public/images/images-responsiveness/prop-shadows.webp">
+      <img class="props" src="/public/images/images-responsiveness/props.webp">
       <h2 href="#" class="nav-text">Bekijk<span class="break"></span>Projecten</h2>
       <span class="pulse delayed"></span>
     </a>
@@ -62,33 +62,33 @@
     <div class="repeating-roof layer-2"></div>
 
     <div class="repeating-wall-right layer-2"></div>
-    <img class="bottom-right layer-2" src="/public/images/images-responsiveness/frame-bottom-right.png">
-    <img class="top-right layer-2" src="/public/images/images-responsiveness/frame-top-right.png">
+    <img class="bottom-right layer-2" src="/public/images/images-responsiveness/frame-bottom-right.webp">
+    <img class="top-right layer-2" src="/public/images/images-responsiveness/frame-top-right.webp">
 
-        <div class="repeating-wall-right layer-2"></div>
-        <img class="bottom-right layer-2" src="/public/images/images-responsiveness/frame-bottom-right.webp">
-        <img class="top-right layer-2" src="/public/images/images-responsiveness/frame-top-right.webp">
-    </div>
-
-{% render '../components/hammer-cursor/hammer-cursor.liquid' %}
-
+    <div class="repeating-wall-right layer-2"></div>
+    <img class="bottom-right layer-2" src="/public/images/images-responsiveness/frame-bottom-right.webp">
+    <img class="top-right layer-2" src="/public/images/images-responsiveness/frame-top-right.webp">
   </div>
 
-  <svg class="visually-hidden" width="10" height="10" xmlns="http://www.w3.org/2000/svg">
-    <defs>
-      <filter id="border-text" filterUnits="userSpaceOnUse">
-        <feMorphology in="SourceAlpha" operator="dilate" radius="3" result="DILATED"/>
+  {% render '../components/hammer-cursor/hammer-cursor.liquid' %}
 
-        <feFlood flood-color="white"/>
-        <feComposite in="OUTLINE-COLOR" in2="DILATED" operator="in" result="COLORED-OUTLINE"/>
+</div>
 
-        <feMerge>
-          <feMergeNode in="COLORED-OUTLINE"/>
-          <feMergeNode in="SourceGraphic"/>
-        </feMerge>
-      </filter>
-    </defs>
-  </svg>
+<svg class="visually-hidden" width="10" height="10" xmlns="http://www.w3.org/2000/svg">
+  <defs>
+    <filter id="border-text" filterUnits="userSpaceOnUse">
+      <feMorphology in="SourceAlpha" operator="dilate" radius="3" result="DILATED" />
+
+      <feFlood flood-color="white" />
+      <feComposite in="OUTLINE-COLOR" in2="DILATED" operator="in" result="COLORED-OUTLINE" />
+
+      <feMerge>
+        <feMergeNode in="COLORED-OUTLINE" />
+        <feMergeNode in="SourceGraphic" />
+      </feMerge>
+    </filter>
+  </defs>
+</svg>
 
 
 {% endblock %}
