fixed alot like alot

--- a/client/index.css
+++ b/client/index.css
@@ -28,3 +28,4 @@
 @import '../server/components/preloader/preload.css';
 @import '../server/components/hammer-cursor/hammer-cursor.css';
 
+@import '../server/components/curtains/curtains.css';
