--- a/server/components/category-filter/category-filter.css
+++ b/server/components/category-filter/category-filter.css
@@ -171,7 +171,7 @@
   --ticket-color-text: #3d0002;
 }
 
-.filter-btn[data-category*="INTERIOR"] {
+.filter-btn[data-category*="INTERIEUR"] {
   --ticket-color-border: #B89300;
   --ticket-color-card: #ffca3a;
   --ticket-color-text: #524100;
