--- a/server/components/submarine/submarine.liquid
+++ b/server/components/submarine/submarine.liquid
@@ -1,6 +1,6 @@
 <div class="sub-card">
   <div class="submarine-container">
-    <img src="/public/images/projects/mannen-met-de-code.png" class="submarine" alt="Submarine" />
+    <img src="/public/images/projects/mannen-met-de-code.webp" class="submarine" alt="Submarine" />
   </div>
   <div class="bubble-container"></div>
 
