--- a/server/views/about/about.liquid
+++ b/server/views/about/about.liquid
@@ -4,98 +4,69 @@
 
 <div class="wrapper-about">
     <aside>
-        <h3>1</h3>
-        <h3>2</h3>
-        <h3>3</h3>
-        <h3>4</h3>
-        <h3>5</h3>
-        <h3>6</h3>
-        <h3>7</h3>
-        <h3>8</h3>
-        <h3>9</h3>
-        <h3>10</h3>
-        <h3>11</h3>
-        <h3>12</h3>
-        <h3>13</h3>
-        <h3>14</h3>
-        <h3>15</h3>
-        <h3>16</h3>
-        <h3>17</h3>
-        <h3>18</h3>
-        <h3>19</h3>
-        <h3>9</h3>
-        <h3>10</h3>
-        <h3>11</h3>
-        <h3>12</h3>
-        <h3>13</h3>
-        <h3>14</h3>
-        <h3>15</h3>
-        <h3>15</h3>
-        <h3>15</h3>
-        <h3>15</h3>
-        <h3>15</h3>
-        <h3>15</h3>
-        <h3>15</h3>
-        <h3>15</h3>
-        <h3>15</h3>
+
     </aside> 
     <main>
+        <div class="about-nav"> <a class="a-ticket ticket-color" href="/">Terug naar projecten</a></div>
+        
         <div class="employee-wrapper">
             <div class="employee">
                 <div class="image">
-                    <img class="green-magnet" src="/public/images/scribbles/tape-green.webp" alt="groene magneet">
-                    <img class="hammer" src="/public/images/scribbles/hammer.svg" alt="hamertje">
-                    <div class="cloud"><img src="/public/images/scribbles/cloud.svg" alt="cloud"></div>
+                    <img class="green-magnet ontop" src="/public/images/scribbles/tape-green.webp" alt="groene magneet">
+                    <img class="hammer ontop" src="/public/images/scribbles/hammer.svg" alt="hamertje">
                     <img src="/public/images/crew/Maarten.webp" alt="Maarten in de werkplaats">
                 </div>
                 <div class="text">
                     <h2 class="about-h2">Maarten Smids</h2>
-                    <h3>Eigenaar</h3>
+                    <h3 class="about-h3">Eigenaar</h3>
                 </div>
             </div>
             <div class="employee">
                 <div class="image">
-                    <img class="white-magnet" src="/public/images/scribbles/tape-white.webp" alt="witte magneet">
-                    <img class="tape" src="/public/images/scribbles/tape-1.webp" alt="tape">
+                    <div class="cloud ontop"><img src="/public/images/scribbles/cloud.svg" alt="cloud"></div>
+                    <img class="white-magnet ontop" src="/public/images/scribbles/tape-white.webp" alt="witte magneet">
+                    <img class="tape ontop" src="/public/images/scribbles/tape-1.webp" alt="tape">
                     <img src="/public/images/crew/rienke.webp" alt="Rienke in de werkplaats">
                 </div>
                 <div class="text">
                     <h2 class="about-h2">Rienke Krikke</h2>
-                    <h3>Chef Werkplaats</h3>
+                    <h3 class="about-h3">Chef Werkplaats</h3>
                 </div>
             </div>
             <div class="employee">
                 <div class="image">
-                    <img class="tape" src="/public/images/scribbles/tape-2.webp" alt="tape">
+                    <img class="red-magnet ontop" src="/public/images/scribbles/tape-red.webp" alt="rode tape">
+                    <img class="tape ontop" src="/public/images/scribbles/tape-2.webp" alt="tape">
                     <img src="/public/images/crew/Berd.webp" alt="Berd in de werkplaats">
                 </div>
                 <div class="text">
                     <h2 class="about-h2">Berd Visscher</h2>
-                    <h3>Ontwerp / Bouw</h3>
+                    <h3 class="about-h3">Ontwerp / Bouw</h3>
                 </div>
             </div>
             <div class="employee">
                 <div class="image">
-                    <img class="orange-magnet" src="/public/images/scribbles/tape-orange.webp" alt="oranje magneet">
-                    <img class="tape" src="/public/images/scribbles/tape-3.webp" alt="tape">
-                    <img class="hammer" src="/public/images/scribbles/hammer.svg" alt="hamertje">
+                    <img class="orange-magnet ontop" src="/public/images/scribbles/tape-orange.webp" alt="oranje magneet">
+                    <img class="tape ontop" src="/public/images/scribbles/tape-3.webp" alt="tape">
+                    <img class="hammer ontop" src="/public/images/scribbles/hammer.svg" alt="hamertje">
                     <img src="/public/images/crew/maarten.webp" alt="Het team die de site gemaakt heeft">
                 </div>
                 <div class="text">
                     <h2 class="about-h2">De Man met de Code</h2>
-                    <h3>Web Design</h3>
+                    <h3 class="about-h3">Web Design</h3>
                 </div>
             </div>
         </div>
         <div class="about">
             <div class="text">
                 <h1 class="about-h1">Over de Man(nen)</h1>
-                <p class="about-p">De mannen met de hamer zijn sinds 2000 jullie betrouwbare ,meedenkende bouwers en
+                <p class="about-p">De mannen met de hamer zijn sinds 2000 jullie betrouwbare meedenkende bouwers en
                     ontwerpers. Ons hart ligt bij decor rekwisieten en interieur. Wij werken voornamelijk met hout en
-                    staal en hebben onze eigen poule van specialisten en decorateurs.Wij zorgen er samen voor dat jullie
+                    staal en hebben onze eigen poule van specialisten en decorateurs. Wij zorgen er samen voor dat jullie
                     project van A tot Z wordt gerealiseerd en naar wens wordt opgeleverd. Graag ontvangen wij jullie in
-                    onze werkplaats op een geweldige lokatie in Diemen om jullie projecten door te nemen. U vraagt -wij
-                    hameren.</p>
+                    onze werkplaats op een geweldige lokatie in Diemen om jullie projecten door te nemen. </p>
+                    
+                    <h4>U vraagt -wij hameren.</h4>
             </div>
             <div class="maps">
                 <iframe
@@ -103,12 +74,14 @@
                     style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <div class="text-maps">
-                    <p>Visseringweg 9 - 1112 AS - Diemen</p>
+                    <h3>Visseringweg 9 - 1112 AS - Diemen</h3>
                     <a href="mailto:info@demanmetdehamer.nl"> info@demanmetdehamer.nl</a>
                 </div>
             </div>
         </div>
     </main>
 </div>
+
+{% render '../../components/curtains/curtains.liquid'  %}
 
 {% endblock %}
