--- a/server/views/projects/projects.liquid
+++ b/server/views/projects/projects.liquid
@@ -89,6 +89,7 @@
 {% render '../../components/submarine/submarine.liquid' %}
 {% render '../../components/pop-over/pop-over.liquid' %}
 {% render '../../components/curtains/curtains.liquid'%}
+{% render '../../components/hammer-cursor/hammer-cursor.liquid' %}
 
 
 {% endblock %}
